# music-eth-contracts

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
contracts/: Cargo.toml  rust-toolchain.toml
contracts/.cargo/: config.toml
contracts/src/: lib.rs  storage.rs
deployments/: sepolia.json
scripts/: build.sh  deploy.sh  export-abi.sh  setup-env.sh
