[package]
name = "music-streaming-contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
stylus-sdk = "0.6.0"
alloy-primitives = "0.7.6"
alloy-sol-types = "0.7.6"
mini-alloc = "0.4.2"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
codegen-units = 1
strip = true

[features]
default = []
export-abi = ["stylus-sdk/export-abi"]

[workspace]